<resources>
    <string name="app_name">PatShow</string>

    <string name="dialog_seekbar_transition_time">Item transition time in millis</string>

    <string name="msg_unsupported_op">还请期待</string>

    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>

    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="photo_path">photo_path</string>
    <string name="new_photo_path">new_photo_path</string>
    <string name="upload_result">upload_result</string>
    <string name="photo_name">photo_name.jpg</string>
    <string name="server_back">serverBack</string>

    <string name="text_type">文字</string>
    <string name="mapping_type">贴图</string>
    <string name="empty" />
    <string name="identify_error">无</string>

    <string name="xsjq_name">象山景区</string>
    <string name="register">注册</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="define_password">确认密码</string>
    <string name="register_info">注册即可使用</string>
    <string name="login_info">登录即可展示自己</string>
    <string name="login">登录</string>
    <string name="no_account">没有账号？选择注册</string>
    <string name="register_success">注册成功</string>
    <string name="userInfo_sp_name">userInfo_sp_name</string>
    <string name="id_key">id_key</string>
    <string name="login_success">登录成功</string>
    <string name="nickname">nickname</string>
    <string name="head_icon">head_icon</string>
    <string name="account_key">account</string>
    <string name="password_key">password</string>


</resources>
