<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <Space
        android:layout_width="1dp"
        android:layout_height="@dimen/statusBarSpace" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_navigate_before_black_32dp" />

    <Space
        android:layout_width="1dp"
        android:layout_height="50dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:text="@string/register_info"
        android:textColor="@color/mainColor"
        android:textSize="20sp" />

    <Space
        android:layout_width="1dp"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@null"
        android:drawableLeft="@drawable/ic_username_24dp"
        android:drawablePadding="20dp"
        android:hint="@string/account"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_pwd_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="45dp"
        android:background="@null"
        android:drawableStart="@drawable/ic_password_24dp"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <EditText
        android:id="@+id/et_pwd_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="45dp"
        android:background="@null"
        android:drawableStart="@drawable/ic_password_24dp"
        android:drawablePadding="20dp"
        android:hint="@string/define_password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/bg_btn_login"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="19sp" />

</LinearLayout>